fixed the titles order and added text align

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  text-align: center;
   height: 900px;
   background-color: rgba(0, 0, 0, 0.5);
 }
@@ -31,6 +32,7 @@
 .cards {
   display: flex;
   justify-content: center;
+  text-align: center;
   height: 900px;
   background-color: #000000dc;
 }
